updated index.html, style.css

--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@
 }
 
 .container-fluid .navbar .navbar-brand {
-    color: #dc09fc;
+    color:rgb(132, 255, 132);
     font-size: 1.6rem;
     font-weight: 500;
     letter-spacing: 2px;
@@ -70,7 +70,7 @@
 }
 
 .skyosys {
-    color: #dc09fc;
+    color: rgb(132, 255, 132);
 }
 
 .input-group {
@@ -80,3 +80,7 @@
 .active {
     font-weight: bolder;
 }
+
+.navbar-toggler-icon {
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg viewBox='0 0 32 32' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath stroke='rgba(255,255,255)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 8h24M4 16h24M4 24h24'/%3E%3C/svg%3E");
+}  
